--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,3 +16,9 @@ h3 {
 	margin: 0px;
 
 }
+
+/* This file contains all the styling elements for the entire application */
+
+#eventgo-navbar {
+    background-color: #2aa198;
+}
