--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,20 +50,26 @@ h3 {
 	color: #f1f1f1;
 }
 
-#eventgo-main {
-	position: absolute;
+.eventgo-main {
+	position: fixed;
 	height: 100%;
 	width: 100%;
-	display: block;
+	display: inline-block;
 }
 
-#eventgo-main .eventFinderView {
+.eventgo-main .eventFinderView {
 	height: 100%;
 	border-right: 2px solid #777;
 }
 
-.eventgo-container-fluid, .eventgo-container-fluid .row {
+.eventgo-container-fluid {
 	height: 100%;
+}
+
+.eventgo-container-fluid .row {
+	height: 100%;
+	margin-right: 0;
+	margin-left: 0;
 }
 
 footer {
@@ -93,7 +99,8 @@ footer h4 {
 	color: #ff0000;
 }
 
-.col-sm-4, .col-sm-8 {
+.col-sm-3, .col-sm-9 {
 	padding-left: 0;
 	padding-right: 0;
+	height:100%;
 }
