--- a/public/css/main.css
+++ b/public/css/main.css
@@ -31,6 +31,12 @@ h3 {
 	margin-bottom: 0px;
 }
 
+.eventgo-icon {
+	width: 45px;
+	float: left;
+	margin-right: 10px;
+}
+
 #map{
 	height: 100%;
 	/*width: 100%;*/
@@ -51,7 +57,7 @@ h3 {
 }
 
 .eventgo-main {
-	position: fixed;
+	position: absolute;
 	height: 100%;
 	width: 100%;
 	display: inline-block;
@@ -99,8 +105,32 @@ footer h4 {
 	color: #ff0000;
 }
 
-.col-sm-3, .col-sm-9 {
+.col-sm-3, .col-sm-9, .col-sm-1, .col-sm-11 {
 	padding-left: 0;
 	padding-right: 0;
 	height:100%;
+}
+
+.event-finder-view {
+	height: 100%;
+}
+
+.event-finder-view .form-control {
+	border-radius: 0;
+}
+
+.event-finder-view .input-group-btn button {
+	border-radius: 0;
+	margin-left: 0;
+	margin-right: -1px;
+}
+
+.event-finder__body .list-group .list-group-item {
+	border-radius: 0;
+}
+
+.eventgo-list-container {
+	width: 100%;
+	padding-left: 0;
+	padding-right: 0;
 }
