--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,6 +17,10 @@ h3 {
 
 }
 
+html, body {
+	font-family: 'Open Sans', sans-serif;
+}
+
 /* This file contains all the styling elements for the entire application */
 
 #eventgo-navbar {
@@ -49,6 +53,7 @@ h3 {
 .navbar-header .navbar-brand {
 	font-size: 20px;
 	color: #f1f1f1;
+
 }
 
 .navbar-default .navbar-nav>li>a {
@@ -95,6 +100,8 @@ footer h4 {
 	font-size: 18px;
 	font-weight: bold;
 	color: #f1f1f1;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 100;
 }
 
 #coffee-icon {
@@ -133,4 +140,34 @@ footer h4 {
 	width: 100%;
 	padding-left: 0;
 	padding-right: 0;
+}
+
+.eventgo-list-container {
+	padding: 6px 0;
+}
+
+#event-info a {
+	font-size: 19px;
+}
+
+#event-id {
+	font-size: 12px;
+	padding-top:5px;
+}
+
+#event-population {
+	width: 36px;
+	height: 36px;
+	background: #f1f1f1;
+	border-radius: 50%;
+	box-shadow: 0px 0px 10px rgba(0,0,0,0.6);
+	position: absolute;
+	margin-top: -4px;
+}
+
+#event-population h4 {
+	position: absolute;
+	top: -2px;
+	left: 8px;
+	font-weight: bold;
 }
