--- a/public/css/main.css
+++ b/public/css/main.css
@@ -244,3 +244,9 @@ input[type="color"]:focus,
   box-shadow: none;
   outline: 0 none;
 }
+
+.cookie-popup {
+	position: fixed;
+	min-height: 60px;
+	background: #777;
+}
