--- a/public/css/main.css
+++ b/public/css/main.css
@@ -119,7 +119,7 @@ footer h4 {
 	color: #ff0000;
 }
 
-.col-sm-3, .col-sm-9, .col-sm-1, .col-sm-11 {
+.col-sm-3, .col-sm-9, .col-sm-11, .col-sm-2 {
 	padding-left: 0;
 	padding-right: 0;
 	height:100%;
@@ -245,9 +245,14 @@ input[type="color"]:focus,
 }
 
 .cookie-popup {
-	position: fixed;
-	min-height: 60px;
+
+	min-height: 30px;
 	background: #777;
+}
+
+.cookie-popup .buttons {
+	max-width: 24em;
+	margin: 0 auto;
 }
 
 @media only screen and (max-width: 767px) {
